# deli

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  PERFORMANCE.md  README.md  README.tr.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
deli/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  engine.py  exceptions.py  jmeter.py  logging_config.py  manual.py  metrics.py  models.py  postman.py  report.py  runner.py  scenarios.py  stress_config.py  stress_report.py  stress_runner.py
deli/templates/: report.html  stress_report.html
examples/: README.md  config.yaml  config_load_baseline.yaml  config_load_stress.yaml  config_ramp_gradual.yaml  config_smoke.yaml  config_soak.yaml  config_spike.yaml  sample_collection.json  stress_config.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_engine.py  test_jmeter.py  test_logging_config.py  test_manual.py  test_metrics.py  test_postman.py  test_report.py  test_runner_integration.py  test_runner_units.py  test_scenarios.py  test_stress_config.py  test_stress_report.py  test_stress_runner_units.py
